<resources>
    <string name="app_name">LeiLotParkingStart</string>
    <string name="PA_name">LeiLotApp</string>
    <string name="toolbar_title">Parking Payment</string>
    <string name="buttonPayment_text">GO TO PAYMENT PAGE</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="start_parking_button">Start Parking</string>
    <string name="list_button">View List</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="notes">Notes</string>
    <string name="title_activity_parking_list">Parking Spots List</string>
    <string name="list_icon">list icon</string>
    <string name="account_icon">account icon</string>
    <string name="wallet_icon">wallet icon</string>
    <string name="stats_icon">stats icon</string>
    <string name="cardButton">Debit/Credit Card</string>
    <string name="fiftyusd">50$</string>
    <string name="tenusd">10$</string>
    <string name="twentyusd">20$</string>
    <string name="Yourbalance">Your balance: 0$</string>
    <string name="PayButton">Pay</string>
    <string name="TotalParkingsText">Total Parkings</string>
    <string name="TotalTimeText">Total Time</string>
    <string name="TotalCostText">Total Cost</string>
    <string name="StartingPriceText">$0.0</string>
    <string name="StartingTotalTimeText">0 sec</string>
    <string name="StartingTotalParkingsText">0</string>



    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>