<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WalletMain">

    <Button
        android:id="@+id/cardButton"
        android:layout_width="190dp"
        android:layout_height="48dp"
        android:text="@string/cardButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.789" />

    <TextView
        android:id="@+id/balanceTextView"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:text="@string/Yourbalance"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button20usd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button10usd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tenusd"
        app:layout_constraintTop_toTopOf="@+id/button20usd"
        app:layout_constraintBottom_toBottomOf="@+id/button20usd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button20usd"  />

    <Button
        android:id="@+id/button20usd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twentyusd"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cardButton"
        app:layout_constraintStart_toEndOf="@+id/button10usd"
        app:layout_constraintEnd_toStartOf="@+id/button50usd"
        app:layout_constraintHorizontal_chainStyle="spread"/>

    <Button
        android:id="@+id/button50usd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fiftyusd"
        app:layout_constraintTop_toTopOf="@+id/button20usd"
        app:layout_constraintBottom_toBottomOf="@+id/button20usd"
        app:layout_constraintStart_toEndOf="@+id/button20usd"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>