<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <!-- Map Fragment -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Start Parking Button -->
    <Button
        android:id="@+id/start_parking_button"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_parking_button"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp" />

    <!-- Show List Button -->
    <Button
        android:id="@+id/showListButton"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@android:drawable/ic_menu_sort_by_size"
        tools:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/list_icon"
        />

    <!-- Bottom Navigation Bar -->
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:id="@+id/bottom_bar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/account_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/account_3"
            android:contentDescription="@string/account_icon"
            android:padding="0dp" />

        <Button
            android:id="@+id/wallet_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/wallet_3"
            android:padding="0dp"
            android:contentDescription="@string/wallet_icon"
            />

        <Button
            android:id="@+id/stats_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/stats"
            android:padding="0dp"
            android:contentDescription="@string/stats_icon"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>