<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Τίτλος -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:textColor="@color/letter_color"
            android:textSize="14sp"
            android:textStyle="bold" />

        <!-- Υπότιτλος -->
        <TextView
            android:id="@+id/tvDateRange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="24dp"
            android:textColor="#666"
            android:textSize="8sp" />

        <!-- Card 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/rounded_background"
            android:elevation="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/TotalParkingsText"
                android:textColor="@color/background_color"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvSessions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/StartingTotalParkingsText"
                android:textColor="@color/background_color"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Card 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/rounded_background"
            android:elevation="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/TotalTimeText"
                android:textColor="@color/background_color"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/StartingTotalTimeText"
                android:textColor="@color/background_color"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Card 3 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:background="@drawable/rounded_background"
            android:elevation="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/TotalCostText"
                android:textColor="@color/background_color"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/StartingPriceText"
                android:textColor="@color/background_color"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
